option java_package = "com.example.grpc";
service DataStorageImplementationService{
	rpc SendData (DSSendDataRequest) returns (DSSendDataResponse);
	rpc RecieveData (DSRecieveDataRequest) returns (DSRecieveDataResponse);
	rpc MkFile (MkFileRequest) returns (MkFileResponse);
}
message DSSendDataRequest{
	optional string FileInput = 1;
	optional int32 IntInput = 2;
}
message DSSendDataResponse{
	optional string key = 1;
	optional string Error = 2;
}
message DSRecieveDataRequest{
	optional string key = 1;
}
message DSRecieveDataResponse{
	optional string IntArrays = 1;
	optional string Error = 2;
}
message MkFileRequest{
	repeated string CharArrays = 1;
}
message MkFileResponse{
	repeated string File = 1;
	optional string Error = 2;
}